--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -16,6 +16,5 @@ steps:
       javaHomeOption: 'JDKVersion'
       jdkVersionOption: '1.8'
       jdkArchitectureOption: 'x64'
-      publishJUnitResults: true
-      testResultsFiles: '**/TEST-*.xml'
+      publishJUnitResults: false
       tasks: 'bintrayUpload'
